--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
 }
 
 /* TYPOGRAPHY */
+.component-headings{
+    background: -webkit-linear-gradient(0deg,#fafafa,#02b7ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 .headline-1 {
     @apply max-w-max;
@@ -23,6 +29,7 @@ body {
 .headline-1{
     @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
 }
+
 
 /* UTILITIES */
 
